@@ -1,17 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX 1.0-Makefile.patch 2257 RMD160 d234ae074a6d1bb47b64cd35e3cae702bc35be1f SHA1 e49914b1450e4f48d02582d4f38766bb793f933f SHA256 f51bbab7b372c3729b0f758b917ade00938cf96b9a36018e7c4924daadfcf5d8
-AUX 1.0-libs.patch 6666 RMD160 fce9ddbe7b675164b7bf9b76deb9a66c29d01589 SHA1 a6fb94751d10a565c47082c978955a98c4068c3c SHA256 54c1823b1f2fbb92c201a40eb6108525b9a3e521a0888f23a86c21b10a79f8e2
-AUX polly-b-gone.png 5350 RMD160 2beeef9c6e7da07a10c42f48000940010eb4c36d SHA1 8c76b00ae386ecfadd568871ad4ecab47766e850 SHA256 2df9f1ff3793ed8a7b185328b645605ffd120afc9d41f470d7ff8485ae07bc9a
 DIST polly-src.zip 8063970 RMD160 05f4948a3d50787b58d1028c4bd28b5e501b64bf SHA1 92c2b59f8dc47e0128827a175faf231d8157b457 SHA256 fd21cbfcc39e0f3a8fe342f30bc7788a77559f2d98cbf1f9156cae81717f5470
-EBUILD polly-b-gone-1.0.ebuild 1163 RMD160 d1b4236138a3272a414d8e24f45c6b1c57efadca SHA1 4c55cecd098111004bb0103b41928a6951dec342 SHA256 3285333ef886d4bc2498d638a705af11fba04991852a7e985a6f549a6a5083a9
-MISC ChangeLog 541 RMD160 596cc5487e2863c722f3bd307d2d9e2be815d78d SHA1 da21084554bf8560f80a50b704ebf54429bf14bd SHA256 db1d956c914bad3bccc183613d8fa454e281284fc617b70156cc72316e260e02
-MISC metadata.xml 247 RMD160 e6b25bfa3980cc1cc9e732b67f457fe2a2e9863c SHA1 4353118d4852f2d7ba4ccbbbb06bbf9fcfd25d24 SHA256 883dd20701cb074b79a6a73acfa6f7e6c5a0dcafba8f506da3ac324327300d68
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk3BvmsACgkQ9xNbxaeWTTzKBACggl0Jlqv8OZEMQd9SXP3fyfw6
-y7YAoJNWa/eErNesF5R9Jl7aSVoPgkG7
-=tO+L
+iEYEARECAAYFAk9A4b4ACgkQ9xNbxaeWTTwfEQCgh6HnjgfwE1C1/UB2LBIS0itK
+hI0An1R/q+Pte8Jr6lwfwF3/iGGTY/W7
+=tBAc
 -----END PGP SIGNATURE-----
