@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/polly-b-gone
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Feb 2012; Piotr Szymaniak <szarpaj@grubelek.pl> polly-b-gone-1.0.ebuild:
+  Added missing depend.
 
   04 May 2011; Piotr Szymaniak <szarpaj@grubelek.pl> polly-b-gone-1.0.ebuild:
   Added amd64 keyword.
